[package]
name = "cqdb"
version = "0.1.9"
authors = ["Dan Rammer <hamersaw@gmail.com>"]
build = "build.rs"

[build-dependencies]
capnpc = "0.5.0"

[dependencies]
argparse = "0.2.1"
capnp = "0.5.0"
csv = "0.14.3"
nom = "1.0.0"
rustp2p = { git = "https://github.com/hamersaw/rustp2p.git", version = "0.1.3" }
strsim = "0.4.0"
time = "0.1"
