[package]
name = "fuzzydb"
version = "0.1.13"
authors = ["Dan Rammer <hamersaw@gmail.com>"]
build = "build.rs"

[build-dependencies]
capnpc = ">= 0.5.0"

[dependencies]
argparse = "0.2.1"
capnp = ">= 0.5.0"
csv = "0.14.3"
nom = "1.0.0"
rustdht = { git = "https://github.com/hamersaw/rustdht.git", version = "0.1.5" }
ruzzy = { git = "https://github.com/hamersaw/ruzzy.git", version = "0.1.2" }
time = "0.1"
